--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,24 @@
   "manifest_version": 3,
   "name": "Mindful Browsing",
   "version": "1.0",
-  "description": "Helps you be more mindful of your browsing habits",
-  "permissions": ["storage", "webNavigation", "tabs"],
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "permissions": ["storage", "tabs", "webNavigation"],
+  "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
   },
+  "web_accessible_resources": [
+    {
+      "resources": ["mindful.html", "mindful.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["mindful.js"]  
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
